Browser height almost fixed, good enough for now.  Remove red background colour and send heightCheck Div behind content

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -390,8 +390,8 @@ ul {
     height: 100%;
     height: 100vh;
     /* 60px = mobile sticky nav */
-    height: calc(var(--vh) - 60px);
     /* height: calc((var(--vh, 1vh) * 100) - 60px); */
+    height: calc(var(--vh) - 60px);
   }
 }
 
@@ -399,8 +399,7 @@ ul {
   position: absolute;
   top: 0;
   left: 0;
-  width: 5px;
+  width: 0;
   height: 100%;
-  background-color: red;
-  z-index: 999;
+  z-index: -1;
 }
